trying to incorporate font variants without a lot of success, fixing alignment and design

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,8 @@
 :root {
   @font-face {
-    font-family: 'Audimat 3000 Regulier';
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
+    font-family: 'Sohne-Buch';
+    src: local('Sohne-Buch'), url(${Sohne-Buch}) format('woff2');
+    unicodeRange: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF;
   }
 
   color-scheme: light dark;
@@ -24,10 +23,10 @@ body {
   position: relative; 
   height: 100vh;
   width: 100%;
-  opacity: 1;
+  opacity: 100;
 }
 
-.hero::before {
+.hero::after {
   content: '';
   background-color: #282828;
   background-image: url(../../single-grid-background.png);
